[package]
name = "spring-cartographer-rs"
version = "0.1.0"
edition = "2021"
description = "A parser for the spring rts engine map files"
licence = "MIT"
keywords = ["Spring", "rts", "smt", "smf"]

[dependencies]
binrw = "0.11.1"
image = "0.24.6"
texpresso = "2.0.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
